# odd-great-expectations

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: create_pypi_package.yaml
odd_great_expectations/: action.py  client.py  errors.py  logger.py  mapper.py  meetup.py
odd_great_expectations/dataset/: __init__.py  file.py  get_dataset.py  sql_table.py
tests/: test_action.py
