[tool.poetry]
name = "odd-great-expectations"
version = "0.2.2"
description = "OpenDataDiscovery Action for Great Expectations"
authors = ["Pavel Makarichev <vixtir90@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ['Open Data Discovery', 'Great Expectations', "Metadata", "Data Discovery", "Data Observability"]
packages = [{include = "odd_great_expectations"}]

[tool.poetry.dependencies]
python = "^3.9"
odd-models = "2.0.48"
oddrn-generator = "^0.1.68"
great-expectations = "^0.18.12"
funcy = "^2.0"
sqlalchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile="black"
